# mcp-openheidelberg

./: .gitignore  README.md  chat.py  cli.py  client.py  client_ollama.py  config.toml_sample  config_sample.toml  main.py  matrix.py  mcp_server_config.json  pyproject.toml
clients/: client_anthropic.py  client_mcp_use.py  client_ollama.py  client_sdk.py  servers_config.json
docs/: MCP.md
server/: config.py  events.py  ical.py  openheidelberg.py  workpackages.py
tests/: conftest.py  test_chatclient.py  test_config.py  test_ical.py  test_openheidelberg.py  test_workpackages.py
