[project]
name = "mcp-openheidelberg"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.56.0",
    "flet>=0.28.3",
    "ics>=0.7.2",
    "mcp[cli]>=1.10.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "flet[all]>=0.28.3",
]
