[project]
name = "mcp-openheidelberg"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.56.0",
    "caldav>=2.0.1",
    "flet>=0.28.3",
    "google-search-results>=2.4.2",
    "icalendar>=6.3.1",
    "ics>=0.7.2",
    "langchain-anthropic>=0.3.17",
    "langchain-ollama>=0.3.3",
    "mcp-use>=1.3.6",
    "mcp[cli]>=1.10.1",
    "nio-bot[cli]>=1.2.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.1",
    "recurring-ical-events==3.*",
    "requests>=2.32.4",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "flet[all]>=0.28.3",
]
